# norns-mimir-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: deploy.yml
docs/: deploy-fly.md  design.md  v0-plan.md
mimir/: config.py  db.py  discord_bot.py  main.py  slack_bot.py  worker.py
mimir/tools/: __init__.py  memory.py
mimir_agent/: config.py  db.py  embeddings.py  main.py  slack_bot.py  worker.py
mimir_agent/tools/: __init__.py  figma.py  github.py  memory.py  projects.py  release_notes.py  sources.py  web.py
tests/: test_figma.py  test_memory.py  test_onboarding.py  test_projects.py  test_slack_bot.py
